--- a/custom-apps/sample-app-refresh/package.json
+++ b/custom-apps/sample-app-refresh/package.json
@@ -1,18 +1,22 @@
 {
   "name": "sample-app-refresh",
+  "version": "0.1.0",
   "homepage": "./",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.5",
-    "@testing-library/user-event": "12.8.1",
-    "@types/react": "17.0.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.96",
+    "@types/react": "^18.2.75",
+    "@types/react-dom": "^18.2.24",
     "bootstrap": "^5.1.3",
     "flowgear-webapp": "^1.1.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.3",
-    "typescript": "4.2.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,21 +28,7 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ],
-    "rules": {
-      "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": [
-        "off"
-      ],
-      "eqeqeq": "off",
-      "array-callback-return": "off",
-      "jsx-a11y/anchor-is-valid": "off",
-      "no-array-constructor": "off",
-      "@typescript-eslint/no-array-constructor": [
-        "off"
-      ],
-      "no-new-object": "off"
-    }
+    ]
   },
   "browserslist": {
     "production": [
@@ -51,9 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/google.visualization": "0.0.60",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
   }
 }
